# remix-of-remix-of-web

./: .env  package.json  scripts-tmp-mkuser.mjs
.lovable/: plan.md
agent/: go.mod  main.go
agent/rust/: Cargo.toml
agent/rust/.cargo/: config.toml
agent/rust/src/: binding.rs  hiden.rs  input.rs  main.rs  relay.rs  signaling.rs  webrtc.rs
buildserver/: .env  README.md  build.py  config.json
hidenhost/: .env.example  Caddyfile  README.md  client-example.js  hidenhost.service  nginx.conf  package.json  server.js
luneshost/: .env  README.md  package.json  server.js
pythonwebsocket/: .env  README.md  server.py
src/: routeTree.gen.ts  styles.css
src/assets/: europe-hardtekk.mp3.asset.json  freaks-hardtekk.mp3.asset.json
src/components/: AIWidget.tsx  LoginMusic.tsx  MouseTrail.tsx  NavMusicWidget.tsx  SubscriptionLock.tsx
src/hooks/: use-device-commands.ts
src/lib/: admin.functions.ts  ai-chat.functions.ts  ai-exec.functions.ts  auth-context.tsx  auth.ts  bio.functions.ts  build-config.functions.ts  builds.functions.ts  customization-context.tsx  dm.functions.ts  friends.functions.ts  i18n.ts  payments.functions.ts  profile.ts  realtime-broadcast.server.ts  recovery-token.ts  recovery.functions.ts  relay-health.functions.ts  relay.ts  share.functions.ts  single-session.ts  theme-context.tsx  totp.functions.ts  use-subscription.ts  webrtc-diagnostics.ts
src/routes/: FREE.tsx  __root.tsx  control.$id.tsx  dashboard.admin.tsx  dashboard.ads.tsx  dashboard.bio.tsx  dashboard.builder.tsx  (+16 more)
stub2/: README.md  settings.gradle.kts
supabase/: config.toml
(+69 files in other folders)
