[package]
name = "sentinel-agent"
version = "0.3.0"
edition = "2021"

[features]
default = []
windowed = []

[[bin]]
name = "sentinel-agent"
path = "src/main.rs"

[dependencies]
ureq = { version = "2.10", default-features = false, features = ["tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
gethostname = "0.5"
whoami = "1.5"
once_cell = "1"
enigo = "0.2"
arboard = { version = "3", default-features = false }

# --- WebRTC live-stream stack (Step 1: deps + skeleton; encoding wired in next step) ---
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
anyhow = "1"
futures-util = "0.3"
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
webrtc = "0.11"

[target.'cfg(windows)'.dependencies]
screenshots = "0.8"
# openh264 only on windows for now — that's the only platform that can
# actually capture the screen, so no point dragging the encoder elsewhere.
openh264 = "0.6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
